--- a/package.json
+++ b/package.json
@@ -1,57 +1,50 @@
 {
   "name": "cardiohub-patient-native",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/bottom-tabs": "^7.4.2",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
-    "axios": "^1.10.0",
+    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/native-stack": "^7.3.23",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
-    "expo-blur": "~14.1.5",
+    "expo-av": "~15.1.7",
+    "expo-build-properties": "^0.6.0",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-dev-launcher": "^5.1.16",
+    "expo-dev-menu": "^6.1.14",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
+    "expo-json-utils": "^0.15.0",
+    "expo-keep-awake": "~14.1.4",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
+    "expo-manifests": "~0.16.6",
+    "expo-modules-core": "~2.5.0",
+    "expo-router": "^5.1.4",
     "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
+    "expo-status-bar": "~1.10.0",
+    "expo-updates": "~0.28.17",
+    "expo-updates-interface": "^1.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-jitsi-meet": "^2.3.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-gesture-handler": "^2.27.2",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "undefined": "\\"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.25.0"
   },
   "private": true
 }
